new1 version: use upper bound of root as critical threshold with rtol = 1e-5, old STS and V_max

--- a/Theta_Critical_Gradient_Algorithm.ipynb
+++ b/Theta_Critical_Gradient_Algorithm.ipynb
@@ -149,7 +149,7 @@
     "        theta_spikes = num_spikes + 1\n",
     "    theta_list, spike_list = bisect(unweighted_input, theta_spikes, theta_range, smallest_range, omega)\n",
     "    theta_critical_range = optimize.root(root_fun, [theta_list[spike_list.index(theta_spikes)-1], theta_list[spike_list.index(theta_spikes)]], args=(unweighted_input, omega)).x \n",
-    "    spike_time, unresetted_V, max_V = STS(unweighted_input, theta_critical_range[1] * (1 - rtol), omega)\n",
+    "    spike_time, unresetted_V, max_V = STS(unweighted_input, theta_critical_range[0] * (1 - rtol), omega)\n",
     "    t_star_list = spike_time[:unresetted_V.index(min(unresetted_V))+1]\n",
     "    return theta_critical_range[1], t_star_list"
    ]
@@ -212,7 +212,7 @@
     "    C = np.zeros(len(spike_time))\n",
     "    count = 0\n",
     "    for spike in spike_time:\n",
-    "        C[count] = 1 + 1\n",
+    "        C[count] = 1\n",
     "        for idx in range(count):\n",
     "            if spike_time[idx] > spike - ref_memory_len:\n",
     "                C[count] += ref_kernel[spike - spike_time[idx]] \n",
@@ -726,11 +726,11 @@
     "                desired_fea(n_fea, desired_n=5, cond=1, multi=0),\n",
     "                desired_fea(n_fea, desired_n=5, cond=1, multi=5)\n",
     "               ]\n",
-    "filenames = [\"theta_omega1F1S_list\",\n",
-    "             \"theta_omega1F5S_list\",\n",
-    "             \"theta_omega5F1S_list\",\n",
-    "             \"theta_omega5FmS_list\",\n",
-    "             \"theta_omega5F5S_list\"\n",
+    "filenames = [\"theta_omega1F1S_list_new1\",\n",
+    "             \"theta_omega1F5S_list_new1\",\n",
+    "             \"theta_omega5F1S_list_new1\",\n",
+    "             \"theta_omega5FmS_list_new1\",\n",
+    "             \"theta_omega5F5S_list_new1\"\n",
     "            ]\n",
     "\n",
     "def run_and_save(filename, fea_idx):\n",
