Code of learning curve for comparison. Added multiple runs.

--- a/training_pool/Learning Curve for Multi-Spike Tempotron.ipynb
+++ b/training_pool/Learning Curve for Multi-Spike Tempotron.ipynb
@@ -204,7 +204,7 @@
    "source": [
     "def add_fea(n_inputs, fea_input, T_fea):\n",
     "    inputs = np.copy(n_inputs)\n",
-    "    start = int((n_inputs.shape[2] - T_fea*1000)/2)\n",
+    "    start = int((inputs.shape[2] - T_fea*1000)/2)\n",
     "    for n in inputs:\n",
     "        n[:, start:start+fea_input.shape[1]] += fea_input\n",
     "    return inputs"
@@ -412,14 +412,14 @@
    },
    "outputs": [],
    "source": [
-    "omega = np.load(\"theta_omega1F1S_list.npy\") # updated omega list after training\n",
+    "omega = np.load(\"theta_omega1F1S_list_new1.npy\") # updated omega list after training\n",
     "#omega = np.load(\"corr_omega1F1S_list.npy\")\n",
     "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 100)\n",
     "fea_inputs = np.load(\"feature_inputs.npy\") # unweighted inputs of features\n",
     "theta = 1 # threshold\n",
     "\n",
     "R_fea_list, R_null_list = neural_response(omega, l_curve_inputs, fea_inputs, T_fea, theta)\n",
-    "np.savez(\"theta_neural_responses_1F1S\", R_fea_list, R_null_list)\n",
+    "np.savez(\"theta_neural_responses_1F1S_new1\", R_fea_list, R_null_list)\n",
     "#np.savez(\"corr_neural_responses_1F1S\", R_fea_list, R_null_list)"
    ]
   },
@@ -438,14 +438,14 @@
    },
    "outputs": [],
    "source": [
-    "omega = np.load(\"theta_omega1F5S_list.npy\") # updated omega list after training\n",
+    "omega = np.load(\"theta_omega1F5S_list_new1.npy\") # updated omega list after training\n",
     "#omega = np.load(\"corr_omega1F5S_list.npy\")\n",
     "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 100)\n",
     "fea_inputs = np.load(\"feature_inputs.npy\") # unweighted inputs of features\n",
     "theta = 1 # threshold\n",
     "\n",
     "R_fea_list, R_null_list = neural_response(omega, l_curve_inputs, fea_inputs, T_fea, theta)\n",
-    "np.savez(\"theta_neural_responses_1F5S\", R_fea_list, R_null_list)\n",
+    "np.savez(\"theta_neural_responses_1F5S_new1\", R_fea_list, R_null_list)\n",
     "#np.savez(\"corr_neural_responses_1F5S\", R_fea_list, R_null_list)"
    ]
   },
@@ -464,14 +464,14 @@
    },
    "outputs": [],
    "source": [
-    "omega = np.load(\"theta_omega5F1S_list.npy\") # updated omega list after training\n",
+    "omega = np.load(\"theta_omega5F1S_list_new1.npy\") # updated omega list after training\n",
     "#omega = np.load(\"corr_omega5F1S_list.npy\")\n",
     "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 100)\n",
     "fea_inputs = np.load(\"feature_inputs.npy\") # unweighted inputs of features\n",
     "theta = 1 # threshold\n",
     "\n",
     "R_fea_list, R_null_list = neural_response(omega, l_curve_inputs, fea_inputs, T_fea, theta)\n",
-    "np.savez(\"theta_neural_responses_5F1S\", R_fea_list, R_null_list)\n",
+    "np.savez(\"theta_neural_responses_5F1S_new1\", R_fea_list, R_null_list)\n",
     "#np.savez(\"corr_neural_responses_5F1S\", R_fea_list, R_null_list)"
    ]
   },
@@ -490,14 +490,14 @@
    },
    "outputs": [],
    "source": [
-    "omega = np.load(\"theta_omega5FmS_list.npy\") # updated omega list after training\n",
+    "omega = np.load(\"theta_omega5FmS_list_new1.npy\") # updated omega list after training\n",
     "#omega = np.load(\"corr_omega5FmS_list.npy\")\n",
     "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 100)\n",
     "fea_inputs = np.load(\"feature_inputs.npy\") # unweighted inputs of features\n",
     "theta = 1 # threshold\n",
     "\n",
     "R_fea_list, R_null_list = neural_response(omega, l_curve_inputs, fea_inputs, T_fea, theta)\n",
-    "np.savez(\"theta_neural_responses_5FmS\", R_fea_list, R_null_list)\n",
+    "np.savez(\"theta_neural_responses_5FmS_new1\", R_fea_list, R_null_list)\n",
     "#np.savez(\"corr_neural_responses_5FmS\", R_fea_list, R_null_list)"
    ]
   },
@@ -516,14 +516,14 @@
    },
    "outputs": [],
    "source": [
-    "omega = np.load(\"theta_omega5F5S_list.npy\") # updated omega list after training\n",
+    "omega = np.load(\"theta_omega5F5S_list_new1.npy\") # updated omega list after training\n",
     "#omega = np.load(\"corr_omega5F5S_list.npy\")\n",
     "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 100)\n",
     "fea_inputs = np.load(\"feature_inputs.npy\") # unweighted inputs of features\n",
     "theta = 1 # threshold\n",
     "\n",
     "R_fea_list, R_null_list = neural_response(omega, l_curve_inputs, fea_inputs, T_fea, theta)\n",
-    "np.savez(\"theta_neural_responses_5F5S\", R_fea_list, R_null_list)\n",
+    "np.savez(\"theta_neural_responses_5F5S_new1\", R_fea_list, R_null_list)\n",
     "#np.savez(\"corr_neural_responses_5F5S\", R_fea_list, R_null_list)"
    ]
   },
@@ -549,9 +549,9 @@
    },
    "outputs": [],
    "source": [
-    "#omega = np.load(\"theta_omega1F1S_list.npy\") # updated omega list after training\n",
+    "#omega = np.load(\"theta_omega1F1S_list_new1.npy\") # updated omega list after training\n",
     "omega = np.load(\"corr_omega1F1S_list.npy\")\n",
-    "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 10)\n",
+    "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 100)\n",
     "raw_fea = features # raw data of features (in dictionary form)\n",
     "theta = 1 # threshold\n",
     "probability = 0.2 # range = (0, 1)\n",
@@ -560,7 +560,7 @@
     "jitter_SD = 2 # Gaussian distribution (in number of bins)\n",
     "\n",
     "R_fea_list, R_null_list = noisy_neural_response(omega, l_curve_inputs, raw_fea, T_fea, theta, probability, noise, jitter_mean, jitter_SD) \n",
-    "#np.savez(\"noisy_theta_neural_responses_1F1S\", R_fea_list, R_null_list)\n",
+    "#np.savez(\"noisy_theta_neural_responses_1F1S_new1\", R_fea_list, R_null_list)\n",
     "np.savez(\"noisy_corr_neural_responses_1F1S\", R_fea_list, R_null_list)\n"
    ]
   },
@@ -579,9 +579,9 @@
    },
    "outputs": [],
    "source": [
-    "#omega = np.load(\"theta_omega1F5S_list.npy\") # updated omega list after training\n",
+    "#omega = np.load(\"theta_omega1F5S_list_new1.npy\") # updated omega list after training\n",
     "omega = np.load(\"corr_omega1F5S_list.npy\")\n",
-    "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 10)\n",
+    "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 100)\n",
     "raw_fea = features # raw data of features (in dictionary form)\n",
     "theta = 1 # threshold\n",
     "probability = 0.2 # range = (0, 1)\n",
@@ -590,7 +590,7 @@
     "jitter_SD = 2 # Gaussian distribution (in number of bins)\n",
     "\n",
     "R_fea_list, R_null_list = noisy_neural_response(omega, l_curve_inputs, raw_fea, T_fea, theta, probability, noise, jitter_mean, jitter_SD) \n",
-    "#np.savez(\"noisy_theta_neural_responses_1F5S\", R_fea_list, R_null_list)\n",
+    "#np.savez(\"noisy_theta_neural_responses_1F5S_new1\", R_fea_list, R_null_list)\n",
     "np.savez(\"noisy_corr_neural_responses_1F5S\", R_fea_list, R_null_list)\n"
    ]
   },
@@ -609,9 +609,9 @@
    },
    "outputs": [],
    "source": [
-    "#omega = np.load(\"theta_omega5F1S_list.npy\") # updated omega list after training\n",
+    "#omega = np.load(\"theta_omega5F1S_list_new1.npy\") # updated omega list after training\n",
     "omega = np.load(\"corr_omega5F1S_list.npy\")\n",
-    "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 10)\n",
+    "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 100)\n",
     "raw_fea = features # raw data of features (in dictionary form)\n",
     "theta = 1 # threshold\n",
     "probability = 0.2 # range = (0, 1)\n",
@@ -620,7 +620,7 @@
     "jitter_SD = 2 # Gaussian distribution (in number of bins)\n",
     "\n",
     "R_fea_list, R_null_list = noisy_neural_response(omega, l_curve_inputs, raw_fea, T_fea, theta, probability, noise, jitter_mean, jitter_SD) \n",
-    "#np.savez(\"noisy_theta_neural_responses_5F1S\", R_fea_list, R_null_list)\n",
+    "#np.savez(\"noisy_theta_neural_responses_5F1S_new1\", R_fea_list, R_null_list)\n",
     "np.savez(\"noisy_corr_neural_responses_5F1S\", R_fea_list, R_null_list)\n"
    ]
   },
@@ -639,9 +639,9 @@
    },
    "outputs": [],
    "source": [
-    "#omega = np.load(\"theta_omega5FmS_list.npy\") # updated omega list after training\n",
+    "#omega = np.load(\"theta_omega5FmS_list_new1.npy\") # updated omega list after training\n",
     "omega = np.load(\"corr_omega5FmS_list.npy\")\n",
-    "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 10)\n",
+    "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 100)\n",
     "raw_fea = features # raw data of features (in dictionary form)\n",
     "theta = 1 # threshold\n",
     "probability = 0.2 # range = (0, 1)\n",
@@ -650,7 +650,7 @@
     "jitter_SD = 2 # Gaussian distribution (in number of bins)\n",
     "\n",
     "R_fea_list, R_null_list = noisy_neural_response(omega, l_curve_inputs, raw_fea, T_fea, theta, probability, noise, jitter_mean, jitter_SD) \n",
-    "#np.savez(\"noisy_theta_neural_responses_5FmS\", R_fea_list, R_null_list)\n",
+    "#np.savez(\"noisy_theta_neural_responses_5FmS_new1\", R_fea_list, R_null_list)\n",
     "np.savez(\"noisy_corr_neural_responses_5FmS\", R_fea_list, R_null_list)\n"
    ]
   },
@@ -669,9 +669,9 @@
    },
    "outputs": [],
    "source": [
-    "#omega = np.load(\"theta_omega5F5S_list.npy\") # updated omega list after training\n",
+    "#omega = np.load(\"theta_omega5F5S_list_new1.npy\") # updated omega list after training\n",
     "omega = np.load(\"corr_omega5F5S_list.npy\")\n",
-    "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 10)\n",
+    "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 100)\n",
     "raw_fea = features # raw data of features (in dictionary form)\n",
     "theta = 1 # threshold\n",
     "probability = 0.2 # range = (0, 1)\n",
@@ -680,8 +680,219 @@
     "jitter_SD = 2 # Gaussian distribution (in number of bins)\n",
     "\n",
     "R_fea_list, R_null_list = noisy_neural_response(omega, l_curve_inputs, raw_fea, T_fea, theta, probability, noise, jitter_mean, jitter_SD) \n",
-    "#np.savez(\"noisy_theta_neural_responses_5F5S\", R_fea_list, R_null_list)\n",
+    "#np.savez(\"noisy_theta_neural_responses_5F5S_new1\", R_fea_list, R_null_list)\n",
     "np.savez(\"noisy_corr_neural_responses_5F5S\", R_fea_list, R_null_list)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 Multiple runs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the cell below to store the learning curve and feature inputs in variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "l_curve_inputs = np.load(\"learning_curve_inputs.npy\") # unweighted inputs for a list of probe trials (n = 100)\n",
+    "fea_inputs = np.load(\"feature_inputs.npy\") # unweighted inputs of features\n",
+    "theta = 1 # threshold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### WITHOUT NOISE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3.1 Noise-free correlation-based learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "omega_list = [np.load(\"corr_omega1F1S_list.npy\"),\n",
+    "              np.load(\"corr_omega1F5S_list.npy\"),\n",
+    "              np.load(\"corr_omega5F1S_list.npy\"),\n",
+    "              np.load(\"corr_omega5FmS_list.npy\"),\n",
+    "              np.load(\"corr_omega5F5S_list.npy\")\n",
+    "             ]\n",
+    "\n",
+    "filenames = [\"corr_neural_responses_1F1S\",\n",
+    "             \"corr_neural_responses_1F5S\",\n",
+    "             \"corr_neural_responses_5F1S\",\n",
+    "             \"corr_neural_responses_5FmS\",\n",
+    "             \"corr_neural_responses_5F5S\"\n",
+    "            ]\n",
+    "\n",
+    "def run_and_save(filename, omega):\n",
+    "    R_fea_list, R_null_list = neural_response(omega, l_curve_inputs, fea_inputs, T_fea, theta)\n",
+    "    np.savez(filename, R_fea_list, R_null_list)\n",
+    "\n",
+    "with multiprocessing.Pool(5) as pool:\n",
+    "    pool.starmap(run_and_save, zip(filenames, omega_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3.2 Noise-free theta-gradient-based learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "omega_list = [np.load(\"theta_omega1F1S_list_new1.npy\"),\n",
+    "              np.load(\"theta_omega1F5S_list_new1.npy\"),\n",
+    "              np.load(\"theta_omega5F1S_list_new1.npy\"),\n",
+    "              np.load(\"theta_omega5FmS_list_new1.npy\"),\n",
+    "              np.load(\"theta_omega5F5S_list_new1.npy\")\n",
+    "             ]\n",
+    "\n",
+    "filenames = [\"theta_neural_responses_1F1S_new1\",\n",
+    "             \"theta_neural_responses_1F5S_new1\",\n",
+    "             \"theta_neural_responses_5F1S_new1\",\n",
+    "             \"theta_neural_responses_5FmS_new1\",\n",
+    "             \"theta_neural_responses_5F5S_new1\"\n",
+    "            ]\n",
+    "\n",
+    "def run_and_save(filename, omega):\n",
+    "    R_fea_list, R_null_list = neural_response(omega, l_curve_inputs, fea_inputs, T_fea, theta)\n",
+    "    np.savez(filename, R_fea_list, R_null_list)\n",
+    "\n",
+    "with multiprocessing.Pool(5) as pool:\n",
+    "    pool.starmap(run_and_save, zip(filenames, omega_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### WITH NOISE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the parameters and run the cell below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "raw_fea = features # raw data of features (in dictionary form)\n",
+    "probability = 0.2 # range = (0, 1)\n",
+    "noise = 0 # delete spikes --> 0, add spikes --> 1\n",
+    "jitter_mean = 0 # Gaussian distribution\n",
+    "jitter_SD = 2 # Gaussian distribution (in number of bins)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3.3 Noisy correlation-based learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "omega_list = [np.load(\"corr_omega1F1S_list.npy\"),\n",
+    "              np.load(\"corr_omega1F5S_list.npy\"),\n",
+    "              np.load(\"corr_omega5F1S_list.npy\"),\n",
+    "              np.load(\"corr_omega5FmS_list.npy\"),\n",
+    "              np.load(\"corr_omega5F5S_list.npy\")\n",
+    "             ]\n",
+    "\n",
+    "filenames = [\"noisy_corr_neural_responses_1F1S\",\n",
+    "             \"noisy_corr_neural_responses_1F5S\",\n",
+    "             \"noisy_corr_neural_responses_5F1S\",\n",
+    "             \"noisy_corr_neural_responses_5FmS\",\n",
+    "             \"noisy_corr_neural_responses_5F5S\"\n",
+    "            ]\n",
+    "\n",
+    "def run_and_save(filename, omega):\n",
+    "    R_fea_list, R_null_list = noisy_neural_response(omega, l_curve_inputs, raw_fea, T_fea, theta, probability, noise, jitter_mean, jitter_SD) \n",
+    "    np.savez(filename, R_fea_list, R_null_list)\n",
+    "\n",
+    "with multiprocessing.Pool(5) as pool:\n",
+    "    pool.starmap(run_and_save, zip(filenames, omega_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3.4 Noisy theta-gradient-based learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "omega_list = [np.load(\"theta_omega1F1S_list_new1.npy\"),\n",
+    "              np.load(\"theta_omega1F5S_list_new1.npy\"),\n",
+    "              np.load(\"theta_omega5F1S_list_new1.npy\"),\n",
+    "              np.load(\"theta_omega5FmS_list_new1.npy\"),\n",
+    "              np.load(\"theta_omega5F5S_list_new1.npy\")\n",
+    "             ]\n",
+    "\n",
+    "filenames = [\"noisy_theta_neural_responses_1F1S_new1\",\n",
+    "             \"noisy_theta_neural_responses_1F5S_new1\",\n",
+    "             \"noisy_theta_neural_responses_5F1S_new1\",\n",
+    "             \"noisy_theta_neural_responses_5FmS_new1\",\n",
+    "             \"noisy_theta_neural_responses_5F5S_new1\"\n",
+    "            ]\n",
+    "\n",
+    "def run_and_save(filename, omega):\n",
+    "    R_fea_list, R_null_list = noisy_neural_response(omega, l_curve_inputs, raw_fea, T_fea, theta, probability, noise, jitter_mean, jitter_SD) \n",
+    "    np.savez(filename, R_fea_list, R_null_list)\n",
+    "\n",
+    "with multiprocessing.Pool(5) as pool:\n",
+    "    pool.starmap(run_and_save, zip(filenames, omega_list))"
    ]
   }
  ],
