--- a/training_pool/Learning Curve for Multi-Spike Tempotron.ipynb
+++ b/training_pool/Learning Curve for Multi-Spike Tempotron.ipynb
@@ -23,6 +23,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import multiprocessing\n",
     "from main_gen import gen_features\n",
     "\n",
     "def gen_background_data(n, fr, duration): \n",
