--- a/report/Multispike_Tempotron_Report.ipynb
+++ b/report/Multispike_Tempotron_Report.ipynb
@@ -416,7 +416,7 @@
     "\n",
     "In contrast, the computational time for correlation-based learning was consistent for all tasks, which was not depending on the difficulty of the task as in multi-spike tempotron. Also, the training time of corrrelation-based learning was much shorter compared to multi-spike tempotron. In short, the multi-spike tempotron might not be appropriate to use for training that involves controlling of a large number of spikes, unless the computational time can be significantly reduced if the $t^\\star$ can be determined precisely.\n",
     "\n",
-    "Lastly, the noise-added features were only used for computing the neural responses after training. This can test the flexibility of the trained neuron in identifying the clues with distorted activity pattern. However, the noise-added features can also be used during the training to examine the flexibility of the learning rules. An effective learning algorithm should have a relative high performance in executing different tasks under different conditions.\n"
+    "Lastly, the noise-added features were only used for computing the neural responses after training. This can test the flexibility of the trained neuron in identifying the clues with distorted activity pattern. However, the noise-added features can also be used during the training to examine the flexibility of the learning rules. An effective learning algorithm should have a relatively high performance in executing different tasks under different conditions.\n"
    ]
   },
   {
